@@ -1,3 +1,10 @@
+2003-04-03  Eddy De Greef <eddy_de_greef at tiscali dot be>
+
+	* backend/mustek_pp.c: Fixed a potential crash bug that could be
+          triggered when calling sane_init/sane_get_devices/sane_exit 
+          multiple times, and fixed some minor bugs to pass the 
+          frontend/tstbackend.c tests.
+
 2003-04-03  Oliver Schwartz <Oliver.Schwartz@gmx.de>
 
 	* backend/snapscan.c backend/snapscan.h backend/snapscan-scsi.c
